--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ django-jquery
 django-bootstrap-toolkit
 django-taggit-autosuggest
 django-mptt 
+django-dag
 south
 # Uncomment if using MySQL
 #MySQL-python
